--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "reselect": "^5.1.1",
