Replaced the SVG logo with a text-based brand name and tagline, added associated styling and font, updated cart utility functions to use strict equality, and configured the project homepage.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clothing-ecommerce-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://murdpra.github.io/clothing-ecommerce-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
